--- a/public/painelmotoboys.html
+++ b/public/painelmotoboys.html
@@ -24,6 +24,9 @@
             background-color: #333;
             color: white;
             padding: 0.5em;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         nav button {
             background-color: #f44336;
@@ -46,6 +49,10 @@
             padding: 10px;
             margin-bottom: 10px;
         }
+        #userEmail {
+            color: white;
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +60,7 @@
         <h1>Interface do Motoboy - Cabana Açaí</h1>
     </header>
     <nav>
+        <span id="userEmail"></span>
         <button id="logoutBtn">Sair</button>
     </nav>
     <main>
@@ -63,12 +71,14 @@
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
-            apiKey: "AIzaSyDRcj2LVVHsFXgGT6zr1YCxeAqrOIPmgUU",
-            authDomain: "cabana-acai-delivery.firebaseapp.com",
-            projectId: "cabana-acai-delivery",
-            storageBucket: "cabana-acai-delivery.appspot.com",
-            messagingSenderId: "111130312815",
-            appId: "1:111130312815:web:b0f28fee3abb6bc6cdb564"
+            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+            authDomain: "cabana-8d55e.firebaseapp.com",
+            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+            projectId: "cabana-8d55e",
+            storageBucket: "cabana-8d55e.appspot.com",
+            messagingSenderId: "706144237954",
+            appId: "1:706144237954:web:345c10370972486afc779b",
+            measurementId: "G-96Y337GYT8"
         };
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
@@ -76,10 +86,12 @@
 
         const logoutBtn = document.getElementById('logoutBtn');
         const pedidosList = document.getElementById('pedidosList');
+        const userEmailElement = document.getElementById('userEmail');
 
         logoutBtn.addEventListener('click', () => {
             auth.signOut().then(() => {
                 console.log('Usuário deslogado com sucesso');
+                window.location.href = 'login.html'; // Redireciona para a página de login
             }).catch((error) => {
                 console.error('Erro ao fazer logout:', error);
             });
@@ -87,9 +99,12 @@
 
         auth.onAuthStateChanged((user) => {
             if (user) {
+                console.log('Usuário autenticado:', user.email);
+                userEmailElement.textContent = user.email;
                 loadPedidosForMotoboy(user.email);
             } else {
                 console.log('Usuário não está autenticado');
+                window.location.href = 'login.html'; // Redireciona para a página de login se não estiver autenticado
             }
         });
 
