--- a/public/painelmotoboys.html
+++ b/public/painelmotoboys.html
@@ -91,7 +91,7 @@
         logoutBtn.addEventListener('click', () => {
             auth.signOut().then(() => {
                 console.log('Usuário deslogado com sucesso');
-                window.location.href = 'login.html'; // Redireciona para a página de login
+                window.location.href = 'index.html'; // Redireciona para a página de login
             }).catch((error) => {
                 console.error('Erro ao fazer logout:', error);
             });
