--- a/public/painelmotoboys.html
+++ b/public/painelmotoboys.html
@@ -104,7 +104,7 @@
                 loadPedidosForMotoboy(user.email);
             } else {
                 console.log('Usuário não está autenticado');
-                window.location.href = 'login.html'; // Redireciona para a página de login se não estiver autenticado
+                window.location.href = 'index.html'; // Redireciona para a página de login se não estiver autenticado
             }
         });
 
