--- a/public/painelmotoboys.html
+++ b/public/painelmotoboys.html
@@ -46,8 +46,21 @@
         .pedido {
             background-color: white;
             border: 1px solid #ddd;
-            padding: 10px;
-            margin-bottom: 10px;
+            padding: 15px;
+            margin-bottom: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .pedido h3 {
+            margin-top: 0;
+            color: #4CAF50;
+        }
+        .pedido p {
+            margin: 5px 0;
+        }
+        .pedido-status {
+            font-weight: bold;
+            text-transform: uppercase;
         }
         #userEmail {
             color: white;
@@ -91,7 +104,7 @@
         logoutBtn.addEventListener('click', () => {
             auth.signOut().then(() => {
                 console.log('Usuário deslogado com sucesso');
-                window.location.href = 'index.html'; // Redireciona para a página de login
+                window.location.href = 'login.html';
             }).catch((error) => {
                 console.error('Erro ao fazer logout:', error);
             });
@@ -104,7 +117,7 @@
                 loadPedidosForMotoboy(user.email);
             } else {
                 console.log('Usuário não está autenticado');
-                window.location.href = 'index.html'; // Redireciona para a página de login se não estiver autenticado
+                window.location.href = 'login.html';
             }
         });
 
@@ -116,9 +129,18 @@
                     const pedidoElement = document.createElement('div');
                     pedidoElement.className = 'pedido';
                     pedidoElement.innerHTML = `
+                        <h3>Pedido #${childSnapshot.key}</h3>
                         <p><strong>Cliente:</strong> ${pedido.customerName}</p>
+                        <p><strong>Telefone:</strong> ${pedido.customerPhone || 'Não informado'}</p>
                         <p><strong>Endereço:</strong> ${pedido.address}</p>
-                        <p><strong>Itens:</strong> ${pedido.items}</p>
+                        <p><strong>Itens:</strong></p>
+                        <ul>
+                            ${pedido.items.map(item => `<li>${item.quantity}x ${item.name} - R$ ${item.price.toFixed(2)}</li>`).join('')}
+                        </ul>
+                        <p><strong>Total:</strong> R$ ${pedido.total.toFixed(2)}</p>
+                        <p><strong>Forma de Pagamento:</strong> ${pedido.paymentMethod}</p>
+                        <p><strong>Data do Pedido:</strong> ${new Date(pedido.orderDate).toLocaleString()}</p>
+                        <p class="pedido-status"><strong>Status:</strong> ${pedido.status}</p>
                     `;
                     pedidosList.appendChild(pedidoElement);
                 });
