--- a/public/enviarpedidos.html
+++ b/public/enviarpedidos.html
@@ -133,8 +133,8 @@
                     <option value="">Selecione um Motoboy</option>
                 </select>
                 <button type="submit">Salvar Pedido</button>
-                <button type="button" id="cancelBtn">Cancelar</button>
             </form>
+            <button id="cancelBtn">Cancelar</button>
         </section>
     </main>
 
@@ -192,7 +192,7 @@
         logoutBtn.addEventListener('click', () => {
             auth.signOut().then(() => {
                 console.log('Usuário deslogado com sucesso');
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }).catch((error) => {
                 console.error('Erro ao fazer logout:', error);
             });
@@ -205,7 +205,7 @@
                 loadPedidos();
             } else {
                 console.log('Usuário não está autenticado');
-                window.location.href = 'login.html';
+                window.location.href = 'index.html';
             }
         });
 
