--- a/public/enviarpedidos.html
+++ b/public/enviarpedidos.html
@@ -1,313 +1,150 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cabana Açaí - Sistema de Entrega</title>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <title>Sistema de Entregas - Açaí Express</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        body, html {
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            height: 100%;
         }
-        header {
-            background-color: #4CAF50;
+        #header {
+            background-color: #8E4585;
             color: white;
+            padding: 10px;
             text-align: center;
-            padding: 1em;
         }
-        nav {
-            background-color: #333;
-            color: white;
-            padding: 0.5em;
+        #container {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            height: calc(100% - 50px);
         }
-        nav button {
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
+        #sidebar {
+            width: 300px;
+            background-color: #f0f0f0;
+            padding: 10px;
+            overflow-y: auto;
         }
-        main {
-            padding: 20px;
+        #map {
+            flex-grow: 1;
         }
-        .pedido {
+        .order {
             background-color: white;
-            border: 1px solid #ddd;
-            padding: 15px;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
+            padding: 10px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
-        .pedido h3 {
-            margin-top: 0;
-            color: #4CAF50;
+        .order h3 {
+            margin: 0 0 10px 0;
+            color: #8E4585;
         }
-        .pedido p {
-            margin: 5px 0;
-        }
-        .pedido-status {
+        .status {
+            display: inline-block;
+            padding: 3px 6px;
+            border-radius: 3px;
+            font-size: 0.8em;
             font-weight: bold;
-            text-transform: uppercase;
         }
-        form {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        input, textarea, select {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        button[type=submit] {
-            width: 100%;
-            background-color: #4CAF50;
+        .pending { background-color: #ffd700; }
+        .in-progress { background-color: #1e90ff; color: white; }
+        .delivered { background-color: #32cd32; color: white; }
+        button {
+            background-color: #8E4585;
             color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
             border: none;
-            border-radius: 4px;
+            padding: 5px 10px;
             cursor: pointer;
-        }
-        button[type=submit]:hover {
-            background-color: #45a049;
-        }
-        #userEmail {
-            color: white;
-            margin-right: 10px;
+            margin-top: 5px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Cabana Açaí - Sistema de Entrega</h1>
-    </header>
-    <nav>
-        <div>
-            <button id="pedidosBtn">Pedidos</button>
-            <button id="novoPedidoBtn">Novo Pedido</button>
-        </div>
-        <div>
-            <span id="userEmail"></span>
-            <button id="logoutBtn">Sair</button>
-        </div>
-    </nav>
-    <main>
-        <section id="pedidosSection">
+    <div id="header">
+        <h1>Açaí Express - Sistema de Entregas</h1>
+    </div>
+    <div id="container">
+        <div id="sidebar">
             <h2>Pedidos</h2>
-            <div id="pedidosList"></div>
-        </section>
-        <section id="novoPedidoSection" style="display:none;">
-            <h2>Novo Pedido</h2>
-            <form id="novoPedidoForm">
-                <input type="text" id="customerName" placeholder="Nome do Cliente" required>
-                <input type="tel" id="customerPhone" placeholder="Telefone do Cliente">
-                <input type="text" id="address" placeholder="Endereço" required>
-                <textarea id="items" placeholder="Itens do Pedido (formato: quantidade x item - preço)" required></textarea>
-                <input type="number" id="total" placeholder="Total do Pedido" step="0.01" required>
-                <select id="paymentMethod" required>
-                    <option value="">Selecione a forma de pagamento</option>
-                    <option value="Dinheiro">Dinheiro</option>
-                    <option value="Cartão">Cartão</option>
-                    <option value="PIX">PIX</option>
-                </select>
-                <select id="motoboySelect" required>
-                    <option value="">Selecione um Motoboy</option>
-                </select>
-                <button type="submit">Salvar Pedido</button>
-            </form>
-            <button id="cancelBtn">Cancelar</button>
-        </section>
-    </main>
+            <div id="orders"></div>
+        </div>
+        <div id="map"></div>
+    </div>
 
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
-        // Configuração do Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
-            authDomain: "cabana-8d55e.firebaseapp.com",
-            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
-            projectId: "cabana-8d55e",
-            storageBucket: "cabana-8d55e.appspot.com",
-            messagingSenderId: "706144237954",
-            appId: "1:706144237954:web:345c10370972486afc779b",
-            measurementId: "G-96Y337GYT8"
-        };
-        firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
-        const auth = firebase.auth();
+        // Inicializar o mapa
+        var map = L.map('map').setView([-5.7793, -35.2009], 13);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
-        let motoboys = [
-            { id: 1, name: "Moisés", email: "moises110723@gmail.com" },
-            { id: 2, name: "Giovanni", email: "giovanni.silva18@gmail.com" },
-            { id: 3, name: "Fellipe Matheus", email: "fellipeirineu90@gmail.com" },
-            { id: 4, name: "Felipe Augusto", email: "felipeaugusto02001@gmail.com" },
-            { id: 5, name: "Boaz", email: "boazd3@gmail.com" },
-            { id: 6, name: "Jackson", email: "musculacaoatual@gmail.com" }
+        // Dados de exemplo de pedidos
+        const orders = [
+            { id: 1, customer: "João Silva", address: "Rua A, 123", status: "pending", lat: -5.7681, lng: -35.1889 },
+            { id: 2, customer: "Maria Oliveira", address: "Av. B, 456", status: "in-progress", lat: -5.7551, lng: -35.2541 },
+            { id: 3, customer: "Pedro Santos", address: "Praça C, 789", status: "delivered", lat: -5.7359, lng: -35.2695 }
         ];
 
-        const pedidosBtn = document.getElementById('pedidosBtn');
-        const novoPedidoBtn = document.getElementById('novoPedidoBtn');
-        const pedidosSection = document.getElementById('pedidosSection');
-        const novoPedidoSection = document.getElementById('novoPedidoSection');
-        const novoPedidoForm = document.getElementById('novoPedidoForm');
-        const cancelBtn = document.getElementById('cancelBtn');
-        const motoboySelect = document.getElementById('motoboySelect');
-        const logoutBtn = document.getElementById('logoutBtn');
-        const userEmailElement = document.getElementById('userEmail');
-
-        pedidosBtn.addEventListener('click', () => {
-            pedidosSection.style.display = 'block';
-            novoPedidoSection.style.display = 'none';
-        });
-
-        novoPedidoBtn.addEventListener('click', () => {
-            pedidosSection.style.display = 'none';
-            novoPedidoSection.style.display = 'block';
-        });
-
-        cancelBtn.addEventListener('click', () => {
-            novoPedidoForm.reset();
-            pedidosSection.style.display = 'block';
-            novoPedidoSection.style.display = 'none';
-        });
-
-        logoutBtn.addEventListener('click', () => {
-            auth.signOut().then(() => {
-                console.log('Usuário deslogado com sucesso');
-                window.location.href = 'index.html';
-            }).catch((error) => {
-                console.error('Erro ao fazer logout:', error);
-            });
-        });
-
-        auth.onAuthStateChanged((user) => {
-            if (user) {
-                console.log('Usuário autenticado:', user.email);
-                userEmailElement.textContent = user.email;
-                loadPedidos();
-            } else {
-                console.log('Usuário não está autenticado');
-                window.location.href = 'index.html';
-            }
-        });
-
-        function populateMotoboySelect() {
-            motoboys.forEach(motoboy => {
-                const option = document.createElement('option');
-                option.value = motoboy.id;
-                option.textContent = motoboy.name;
-                motoboySelect.appendChild(option);
+        // Função para atualizar a lista de pedidos
+        function updateOrders() {
+            const ordersContainer = document.getElementById('orders');
+            ordersContainer.innerHTML = '';
+            orders.forEach(order => {
+                const orderElement = document.createElement('div');
+                orderElement.className = 'order';
+                orderElement.innerHTML = `
+                    <h3>Pedido #${order.id}</h3>
+                    <p><strong>Cliente:</strong> ${order.customer}</p>
+                    <p><strong>Endereço:</strong> ${order.address}</p>
+                    <p><strong>Status:</strong> <span class="status ${order.status}">${getStatusText(order.status)}</span></p>
+                    <button onclick="updateStatus(${order.id})">Atualizar Status</button>
+                    <button onclick="showOnMap(${order.lat}, ${order.lng})">Ver no Mapa</button>
+                `;
+                ordersContainer.appendChild(orderElement);
             });
         }
 
-        novoPedidoForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const customerName = document.getElementById('customerName').value;
-            const customerPhone = document.getElementById('customerPhone').value;
-            const address = document.getElementById('address').value;
-            const items = document.getElementById('items').value;
-            const total = parseFloat(document.getElementById('total').value);
-            const paymentMethod = document.getElementById('paymentMethod').value;
-            const motoboyId = motoboySelect.value;
-
-            if (!motoboyId) {
-                alert('Por favor, selecione um motoboy.');
-                return;
+        // Função para obter o texto do status
+        function getStatusText(status) {
+            switch(status) {
+                case 'pending': return 'Pendente';
+                case 'in-progress': return 'Em Entrega';
+                case 'delivered': return 'Entregue';
+                default: return 'Desconhecido';
             }
+        }
 
-            const motoboy = motoboys.find(m => m.id === parseInt(motoboyId));
+        // Função para atualizar o status do pedido
+        function updateStatus(orderId) {
+            const order = orders.find(o => o.id === orderId);
+            if (order) {
+                switch(order.status) {
+                    case 'pending':
+                        order.status = 'in-progress';
+                        break;
+                    case 'in-progress':
+                        order.status = 'delivered';
+                        break;
+                    case 'delivered':
+                        order.status = 'pending';
+                        break;
+                }
+                updateOrders();
+            }
+        }
 
-            const newPedido = {
-                customerName,
-                customerPhone,
-                address,
-                items: items.split('\n').map(item => {
-                    const [quantity, name, price] = item.split(' - ');
-                    return { quantity: quantity.split('x')[0].trim(), name: name.trim(), price: parseFloat(price.replace('R$', '').trim()) };
-                }),
-                total,
-                paymentMethod,
-                motoboyId: parseInt(motoboyId),
-                motoboyName: motoboy.name,
-                motoboyEmail: motoboy.email,
-                orderDate: Date.now(),
-                status: 'Pendente'
-            };
+        // Função para mostrar o pedido no mapa
+        function showOnMap(lat, lng) {
+            map.setView([lat, lng], 16);
+            L.marker([lat, lng]).addTo(map)
+                .bindPopup('Local de entrega')
+                .openPopup();
+        }
 
-            // Salvar o pedido no Firebase
-            const newPedidoRef = database.ref('pedidos').push();
-            newPedidoRef.set(newPedido)
-                .then(() => {
-                    alert('Pedido salvo com sucesso!');
-                    novoPedidoForm.reset();
-                    pedidosSection.style.display = 'block';
-                    novoPedidoSection.style.display = 'none';
-                    loadPedidos();
-                })
-                .catch((error) => {
-                    console.error('Erro ao salvar pedido:', error);
-                    alert('Erro ao salvar pedido. Por favor, tente novamente.');
-                });
-        });
-
-function loadPedidos() {
-    const pedidosList = document.getElementById('pedidosList');
-    pedidosList.innerHTML = '';
-
-    database.ref('pedidos').on('value', (snapshot) => {
-        pedidosList.innerHTML = '';
-        snapshot.forEach((childSnapshot) => {
-            const pedido = childSnapshot.val();
-            const pedidoElement = document.createElement('div');
-            pedidoElement.className = 'pedido';
-            
-            // Ensure pedido.items is an array
-            const items = Array.isArray(pedido.items) ? pedido.items : [];
-            
-            pedidoElement.innerHTML = `
-                <h3>Pedido #${childSnapshot.key}</h3>
-                <p><strong>Cliente:</strong> ${pedido.customerName || 'Não informado'}</p>
-                <p><strong>Telefone:</strong> ${pedido.customerPhone || 'Não informado'}</p>
-                <p><strong>Endereço:</strong> ${pedido.address || 'Não informado'}</p>
-                <p><strong>Itens:</strong></p>
-                <ul>
-                    ${items.map(item => {
-                        const quantity = item.quantity || 'N/A';
-                        const name = item.name || 'Item desconhecido';
-                        const price = typeof item.price === 'number' ? item.price.toFixed(2) : 'N/A';
-                        return `<li>${quantity}x ${name} - R$ ${price}</li>`;
-                    }).join('')}
-                </ul>
-                <p><strong>Total:</strong> R$ ${typeof pedido.total === 'number' ? pedido.total.toFixed(2) : 'N/A'}</p>
-                <p><strong>Forma de Pagamento:</strong> ${pedido.paymentMethod || 'Não informado'}</p>
-                <p><strong>Motoboy:</strong> ${pedido.motoboyName || 'Não atribuído'}</p>
-                <p><strong>Data do Pedido:</strong> ${pedido.orderDate ? new Date(pedido.orderDate).toLocaleString() : 'Data não disponível'}</p>
-                <p class="pedido-status"><strong>Status:</strong> ${pedido.status || 'Não definido'}</p>
-            `;
-            pedidosList.appendChild(pedidoElement);
-        });
-    });
-}
-        // Inicialização
-        populateMotoboySelect();
+        // Inicializar a lista de pedidos
+        updateOrders();
     </script>
 </body>
 </html>
