--- a/public/portalmotoboy.html
+++ b/public/portalmotoboy.html
@@ -8,44 +8,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1, h2 {
-            color: #333;
-        }
-        .info-box {
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            padding: 15px;
-            margin-bottom: 20px;
-            border-radius: 4px;
-        }
-        .progress-bar {
-            width: 100%;
-            background-color: #e0e0e0;
-            padding: 3px;
-            border-radius: 3px;
-            box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
-        }
-        .progress-bar-fill {
-            display: block;
-            height: 22px;
-            background-color: #659cef;
-            border-radius: 3px;
-            transition: width 500ms ease-in-out;
-        }
+        /* ... (mantenha o CSS anterior) ... */
     </style>
 </head>
 <body>
@@ -70,6 +33,12 @@
             <p>Avaliação Média: <span id="avaliacaoMedia"></span></p>
             <p>Pontos Acumulados: <span id="pontosAcumulados"></span></p>
         </div>
+        <div id="debugInfo" class="info-box">
+            <h2>Informações de Depuração</h2>
+            <p>Status de Autenticação: <span id="authStatus"></span></p>
+            <p>UID do Usuário: <span id="userUID"></span></p>
+            <p>Dados do Usuário: <pre id="userData"></pre></p>
+        </div>
     </div>
 
     <script>
@@ -93,11 +62,16 @@
 
         // Função para carregar dados do usuário
         function carregarDadosUsuario(uid) {
+            document.getElementById('authStatus').textContent = 'Autenticado';
+            document.getElementById('userUID').textContent = uid;
+
             db.ref('usuarios/' + uid).once('value').then((snapshot) => {
                 const userData = snapshot.val();
+                document.getElementById('userData').textContent = JSON.stringify(userData, null, 2);
+
                 if (userData) {
-                    document.getElementById('nomeUsuario').textContent = userData.nome;
-                    document.getElementById('emailUsuario').textContent = userData.email;
+                    document.getElementById('nomeUsuario').textContent = userData.nome || 'Não definido';
+                    document.getElementById('emailUsuario').textContent = userData.email || 'Não definido';
                     document.getElementById('desafioDescricao').textContent = userData.desafioSemana || 'Nenhum desafio atual';
                     
                     const progresso = userData.progressoDesafio || 0;
@@ -109,7 +83,13 @@
                     document.getElementById('entregasRealizadas').textContent = userData.entregasRealizadas || 0;
                     document.getElementById('avaliacaoMedia').textContent = (userData.avaliacaoMedia || 0).toFixed(1);
                     document.getElementById('pontosAcumulados').textContent = userData.pontosAcumulados || 0;
+                } else {
+                    console.error('Dados do usuário não encontrados no banco de dados');
+                    alert('Erro: Dados do usuário não encontrados. Por favor, contate o suporte.');
                 }
+            }).catch((error) => {
+                console.error('Erro ao carregar dados do usuário:', error);
+                alert('Erro ao carregar dados do usuário. Por favor, tente novamente mais tarde.');
             });
         }
 
@@ -118,8 +98,12 @@
             if (user) {
                 carregarDadosUsuario(user.uid);
             } else {
-                // Redirecionar para página de login se não estiver autenticado
-                window.location.href = 'login.html';
+                document.getElementById('authStatus').textContent = 'Não Autenticado';
+                document.getElementById('userUID').textContent = 'N/A';
+                document.getElementById('userData').textContent = 'N/A';
+                console.log('Usuário não está autenticado');
+                // Você pode decidir redirecionar para a página de login aqui
+                // window.location.href = 'login.html';
             }
         });
     </script>
