--- a/public/portalmotoboy.html
+++ b/public/portalmotoboy.html
@@ -97,14 +97,14 @@
         // Referência ao banco de dados
         const db = firebase.database();
 
-        // Lista de nomes de usuários
+        // Lista atualizada de nomes de usuários
         const usuarios = {
-            "kevin.naoki.sato12345@gmail.com": "Kevin Naoki Sato",
-            "henrique.machado.vilas.boas@gmail.com": "Henrique Machado Vilas Boas",
-            "meireles.mariana@gmail.com": "Mariana Meireles",
-            "pedro.henrique.nobrega@gmail.com": "Pedro Henrique Nobrega",
-            "ricardo.borges@gmail.com": "Ricardo Borges",
-            "musculacaoatual@gmail.com": "Usuário Musculação Atual"
+            "musculacaoatual@gmail.com": "Jackson",
+            "giovanni.silva18@gmail.com": "Giovanni",
+            "boazd3@gmail.com": "Boaz",
+            "fellipeirineu90@gmail.com": "Fellipe Matheus",
+            "moises110723@gmail.com": "Moisés",
+            "felipeaugusto02001@gmail.com": "Felipe Augusto"
         };
 
         // Função para carregar dados do usuário
