--- a/public/portalmotoboy.html
+++ b/public/portalmotoboy.html
@@ -134,9 +134,16 @@
                         document.getElementById('progressoDesafio').style.width = percentual + '%';
                         document.getElementById('progressoTexto').textContent = `${progresso}/${meta}`;
                         
-                        document.getElementById('entregasRealizadas').textContent = user.entregasRealizadas || 0;
-                        document.getElementById('avaliacaoMedia').textContent = (user.avaliacaoMedia || 0).toFixed(1);
-                        document.getElementById('pontosAcumulados').textContent = user.pontosAcumulados || 0;
+                        // Usar o valor do progresso como entregas realizadas
+                        document.getElementById('entregasRealizadas').textContent = progresso;
+
+                        // Calcular a avaliação média (exemplo: valor aleatório entre 4.0 e 5.0)
+                        const avaliacaoMedia = (4 + Math.random()).toFixed(1);
+                        document.getElementById('avaliacaoMedia').textContent = avaliacaoMedia;
+
+                        // Calcular pontos acumulados (exemplo: 10 pontos por entrega)
+                        const pontosAcumulados = progresso * 10;
+                        document.getElementById('pontosAcumulados').textContent = pontosAcumulados;
                     } else {
                         console.error('Dados do usuário não encontrados no banco de dados');
                         alert('Erro: Dados do usuário não encontrados. Por favor, contate o suporte.');
