--- a/public/menu.html
+++ b/public/menu.html
@@ -87,6 +87,10 @@
                 <i class="fas fa-motorcycle"></i>
                 Ver Entregas do Dia
             </a>
+            <a href="portaldomotoboy.html" class="menu-option">
+                <i class="fas fa-diamond"></i>
+                Desafios
+            </a>
             <a href="#" class="menu-option" id="btnLogout">
                 <i class="fas fa-sign-out-alt"></i>
                 Sair
