--- a/public/menu.html
+++ b/public/menu.html
@@ -87,7 +87,7 @@
                 <i class="fas fa-motorcycle"></i>
                 Ver Entregas do Dia
             </a>
-            <a href="portaldomotoboy.html" class="menu-option">
+            <a href="portalmotoboy.html" class="menu-option">
                 <i class="fas fa-diamond"></i>
                 Desafios
             </a>
