--- a/public/chat.html
+++ b/public/chat.html
@@ -7,6 +7,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,57 +24,119 @@
         }
         #messageForm {
             display: flex;
+            margin-bottom: 10px;
         }
         #messageInput {
             flex-grow: 1;
             margin-right: 10px;
+        }
+        .message {
+            margin-bottom: 10px;
+        }
+        .message .sender {
+            font-weight: bold;
+        }
+        .message .timestamp {
+            font-size: 0.8em;
+            color: #888;
+        }
+        #typingIndicator {
+            font-style: italic;
+            color: #888;
+        }
+        #fileInput {
+            display: none;
+        }
+        #fileLabel {
+            cursor: pointer;
+            padding: 5px 10px;
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+        .emoji-picker {
+            margin-top: 10px;
+        }
+        .emoji {
+            cursor: pointer;
+            font-size: 1.2em;
+            margin-right: 5px;
         }
     </style>
 </head>
 <body>
     <h1>Chat do Motoboy</h1>
     <div id="messages"></div>
+    <div id="typingIndicator"></div>
     <form id="messageForm">
         <input type="text" id="messageInput" placeholder="Digite sua mensagem" required>
+        <label for="fileInput" id="fileLabel">📎</label>
+        <input type="file" id="fileInput" accept="image/*">
         <button type="submit">Enviar</button>
     </form>
+    <div class="emoji-picker">
+        <span class="emoji" onclick="addEmoji('😊')">😊</span>
+        <span class="emoji" onclick="addEmoji('👍')">👍</span>
+        <span class="emoji" onclick="addEmoji('🚚')">🚚</span>
+        <span class="emoji" onclick="addEmoji('🏍️')">🏍️</span>
+    </div>
 
     <script>
-        // Configuração do Firebase (substitua com suas próprias credenciais)
+        // Configuração do Firebase
         const firebaseConfig = {
-            // Suas configurações do Firebase aqui
-  const firebaseConfig = {
-  apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
-  authDomain: "cabana-8d55e.firebaseapp.com",
-  databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
-  projectId: "cabana-8d55e",
-  storageBucket: "cabana-8d55e.appspot.com",
-  messagingSenderId: "706144237954",
-  appId: "1:706144237954:web:345c10370972486afc779b",
-  measurementId: "G-96Y337GYT8"
+            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+            authDomain: "cabana-8d55e.firebaseapp.com",
+            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+            projectId: "cabana-8d55e",
+            storageBucket: "cabana-8d55e.appspot.com",
+            messagingSenderId: "706144237954",
+            appId: "1:706144237954:web:345c10370972486afc779b",
+            measurementId: "G-96Y337GYT8"
         };
 
         // Inicializa o Firebase
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
         const auth = firebase.auth();
+        const storage = firebase.storage();
 
         const messagesDiv = document.getElementById('messages');
         const messageForm = document.getElementById('messageForm');
         const messageInput = document.getElementById('messageInput');
+        const fileInput = document.getElementById('fileInput');
+        const typingIndicator = document.getElementById('typingIndicator');
+
+        let currentUser;
+        let currentRoomId;
+
+        // Função para criar sala de chat
+        function createChatRoom(motoboyEmail) {
+            return db.collection('chatRooms').add({
+                motoboyEmail: motoboyEmail,
+                createdAt: firebase.firestore.FieldValue.serverTimestamp()
+            });
+        }
 
         // Função para carregar mensagens
-        function loadMessages() {
-            db.collection('messages').orderBy('timestamp').onSnapshot((snapshot) => {
-                messagesDiv.innerHTML = '';
-                snapshot.forEach((doc) => {
-                    const message = doc.data();
-                    const messageElement = document.createElement('p');
-                    messageElement.textContent = `${message.sender}: ${message.text}`;
-                    messagesDiv.appendChild(messageElement);
+        function loadMessages(roomId) {
+            currentRoomId = roomId;
+            db.collection('chatRooms').doc(roomId).collection('messages')
+                .orderBy('timestamp')
+                .onSnapshot((snapshot) => {
+                    messagesDiv.innerHTML = '';
+                    snapshot.forEach((doc) => {
+                        const message = doc.data();
+                        const messageElement = document.createElement('div');
+                        messageElement.className = 'message';
+                        messageElement.innerHTML = `
+                            <span class="sender">${message.sender}</span>: 
+                            ${message.text}
+                            <span class="timestamp">${new Date(message.timestamp.toDate()).toLocaleString()}</span>
+                        `;
+                        messagesDiv.appendChild(messageElement);
+                    });
+                    messagesDiv.scrollTop = messagesDiv.scrollHeight;
                 });
-                messagesDiv.scrollTop = messagesDiv.scrollHeight;
-            });
         }
 
         // Enviar mensagem
@@ -82,24 +145,102 @@
             const text = messageInput.value;
             if (text.trim() === '') return;
 
-            const user = auth.currentUser;
-            if (user) {
-                db.collection('messages').add({
+            if (currentUser && currentRoomId) {
+                db.collection('chatRooms').doc(currentRoomId).collection('messages').add({
                     text: text,
-                    sender: user.email,
+                    sender: currentUser.email,
                     timestamp: firebase.firestore.FieldValue.serverTimestamp()
                 });
                 messageInput.value = '';
+                updateTypingStatus(false);
             }
         });
+
+        // Atualizar status do usuário
+        function updateUserStatus(userId, isOnline) {
+            return db.collection('users').doc(userId).update({
+                isOnline: isOnline,
+                lastSeen: firebase.firestore.FieldValue.serverTimestamp()
+            });
+        }
+
+        // Enviar notificação
+        function sendNotification(message) {
+            if (Notification.permission === "granted") {
+                new Notification("Nova mensagem", { body: message });
+            }
+        }
+
+        // Enviar arquivo
+        fileInput.addEventListener('change', (e) => {
+            const file = e.target.files[0];
+            const storageRef = storage.ref(`chatFiles/${file.name}`);
+            storageRef.put(file).then((snapshot) => {
+                snapshot.ref.getDownloadURL().then((url) => {
+                    db.collection('chatRooms').doc(currentRoomId).collection('messages').add({
+                        text: `<img src="${url}" alt="Imagem enviada" style="max-width: 200px;">`,
+                        sender: currentUser.email,
+                        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                    });
+                });
+            });
+        });
+
+        // Indicador de digitação
+        let typingTimer;
+        messageInput.addEventListener('input', () => {
+            clearTimeout(typingTimer);
+            updateTypingStatus(true);
+            typingTimer = setTimeout(() => updateTypingStatus(false), 2000);
+        });
+
+        function updateTypingStatus(isTyping) {
+            if (currentUser && currentRoomId) {
+                db.collection('chatRooms').doc(currentRoomId).update({
+                    [`${currentUser.uid}_typing`]: isTyping
+                });
+            }
+        }
+
+        // Observar indicador de digitação
+        function observeTypingIndicator(roomId) {
+            db.collection('chatRooms').doc(roomId)
+                .onSnapshot((doc) => {
+                    const data = doc.data();
+                    for (let key in data) {
+                        if (key.endsWith('_typing') && data[key] && key !== `${currentUser.uid}_typing`) {
+                            typingIndicator.textContent = 'Alguém está digitando...';
+                            return;
+                        }
+                    }
+                    typingIndicator.textContent = '';
+                });
+        }
+
+        // Adicionar emoji
+        function addEmoji(emoji) {
+            messageInput.value += emoji;
+        }
 
         // Verificar autenticação e carregar mensagens
         auth.onAuthStateChanged((user) => {
             if (user) {
-                loadMessages();
+                currentUser = user;
+                updateUserStatus(user.uid, true);
+                createChatRoom(user.email).then((roomRef) => {
+                    loadMessages(roomRef.id);
+                    observeTypingIndicator(roomRef.id);
+                });
             } else {
                 console.log('Usuário não autenticado');
                 // Redirecionar para página de login ou mostrar mensagem de erro
+            }
+        });
+
+        // Limpar status ao fechar a página
+        window.addEventListener('beforeunload', () => {
+            if (currentUser) {
+                updateUserStatus(currentUser.uid, false);
             }
         });
     </script>
